feat: 주요 폰트 preload 추가 및 preloadCriticalPagesOnIdle 주석 처리
- index.html에 주요 폰트를 preload하여 CLS 방지
- AppRoutes 컴포넌트에서 preloadCriticalPagesOnIdle 함수 호출을 주석 처리하여 코드 정리

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- 폰트 로딩으로 인한 CLS 방지를 위해 주요 폰트 preload -->
+    <link rel="preload" href="/src/assets/fonts/KoddiUDOnGothic-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/src/assets/fonts/KoddiUDOnGothic-Bold.woff2" as="font" type="font/woff2" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
